# rscratch

./: .gitignore  .gitmodules  Justfile  Makefile  README.md  demo2.py  embeddings_loop.py  embeddings_loop2.py  loop.py  nnsight_activation_patch.py  nnsight_examples.py  nnsight_simple_test.py  nnsight_test.py  pyproject.toml  tests.py  transformer_lens_test_simple.py  transformerlens_activation_patch.py
cpu_profile/: .gitignore  nnsight.html  nnsight.json  transformerlens.html  transformerlens.json  transformerlens_stack_trace.html
gpu_profile/: nnsight.html  nnsight.json  transformer.html  transformer.json
nnsight/: edge.py  nnsight_activation_patch.py  nnsight_embeddings.py  nnsight_mistral_mamba.py  nnsight_test.py  nnsight_test_remote.py  nnsight_utils.py
torch/: torch_embeddings.py
transformer_lens/: transformer_lens_test.py
